# advent-of-code-2022

./: .gitmodules  Cargo.toml  README.md  mkday.sh
template/: Cargo.toml  README.md  soln.rs
