# This program is licensed under the "MIT License".
# Please see the file LICENSE in this distribution
# for license terms.

[package]
name = "day<0day>"
version = "0.1.0"
authors = ["Bart Massey <bart@cs.pdx.edu>"]
publish = false
description = "Solution to Advent of Code <year> Day <day>."
repository = "http://github.com/AdventOfCode<year>-Massey/day<0day>"
readme = "README.md"
license = "MIT"
edition = "2021"

[[bin]]
name = "day<0day>"
path = "soln.rs"

[dependencies.aoc]
version = "0.2"
git = "https://github.com/BartMassey/libaoc"

